# shalrath

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  unit_test_data.rs
src/integration_tests/: basic_box_map.rs  mod.rs  non_foss.rs
src/parser/: mod.rs  primitive.rs
src/parser/repr/: mod.rs
src/parser/repr/map/: mod.rs
src/parser/repr/map/entity/: mod.rs
src/parser/repr/map/entity/brushes/: mod.rs
src/parser/repr/map/entity/brushes/brush/: mod.rs
src/parser/repr/map/entity/brushes/brush/brush_plane/: extension.rs  mod.rs
src/parser/repr/map/entity/properties/: mod.rs  property.rs
src/repr/: mod.rs
src/repr/map/: mod.rs
src/repr/map/entity/: mod.rs
src/repr/map/entity/brushes/: mod.rs
src/repr/map/entity/brushes/brush/: mod.rs
src/repr/map/entity/brushes/brush/brush_plane/: extension.rs  mod.rs
src/repr/map/entity/brushes/brush/brush_plane/plane/: mod.rs  point.rs
src/repr/map/entity/properties/: mod.rs  property.rs
test_data/: 0-trenchbroom-group-hierarchy.map  Bevel.map  abstract-test.map  abstract_test.map  abstract_test_beveled.map  abstract_test_edited.map  basic-box.map  closed-surface-test.map  cube.map  daikatana-color-test.map  face-containment-test.map  internal-faces-test.map  lighting_test.map  mean_block.map  mean_block_single.map  mean_pillar.map  mean_pillar_single.map  nested-cubes.map  test_cylinder.map  tetrahedron.map  trenchbroom-test-daikatana.map  trenchbroom-test-q2.map  trenchbroom-test-q3-legacy.map  trenchbroom-test-q3.map  unit.map  unit_beveled.map  uv-test.map
(+6 files in other folders)
