[package]
name = "shalrath"
version = "0.2.6"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A rusty, spiky, heat-seeing Quake map parser."
repository = "https://github.com/QodotPlugin/shalrath/"
keywords = ["map", "quake", "geometry", "brushes", "gamedev"]
categories = ["parsing", "parser-implementations", "rendering::data-formats", "game-development"]

[features]
default = ["serde"]
non_foss_tests = []

[dependencies]
nom = "7.1.3"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]
optional = true
